--- a/SearchActivity/search.html
+++ b/SearchActivity/search.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <label>Search</label>
-<form action="searchhandler.php" method = 'POST'>
+<form action="searchHandler.php" method = 'POST'>
 <input type="text" name="SearchBar">
 <input type="submit">
 </form>
