changed searchhandler logic

--- a/SearchActivity/search.html
+++ b/SearchActivity/search.html
@@ -7,7 +7,7 @@
 <body>
 <label>Search</label>
 <form action="searchHandler.php" method = 'POST'>
-<input type="text" name="SearchBar">
+<input type="text" name="SearchBar" value="SearchBar'>
 <input type="submit">
 </form>
 </body>
