--- a/SearchActivity/search.html
+++ b/SearchActivity/search.html
@@ -7,8 +7,8 @@
 <body>
 <label>Search</label>
 <form action="searchHandler.php" method = 'POST'>
-<input type="text" name="SearchBar" value="SearchBar'>
-<input type="submit">
+<input type="text" name="SearchBar" value="SearchBar">
+<input type="submit" name="Search" value="search">
 </form>
 </body>
 </html>
