fixed all files to work properly

--- a/SearchActivity/search.html
+++ b/SearchActivity/search.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-<label>Search</label>
-<form action="searchHandler.php" method = 'POST'>
-<input type="text" name="SearchBar" value="SearchBar">
-<input type="submit" name="Search" value="search">
-</form>
-</body>
+	<head>
+		<meta charset="ISO-8859-1">
+			<title>Search for First Names</title>
+	</head>
+	<body>
+		<label>Search</label>
+			<form action="searchHandler.php" method = 'POST'>
+		Search for a First Name<input type="text" name="First_Name" required = "true"> <br>
+			<input type="submit" class="brn" name="Search" value="Search">
+		</form>
+	</body>
 </html>
