changed form action for part 2

--- a/activityPart2/login.html
+++ b/activityPart2/login.html
@@ -5,7 +5,7 @@
 		<title>Login Screen</title>
 	</head>
 <body>
-	<form action="LoginHandler.php" method="POST">
+	<form action="loginHandler.php" method="POST">
 		<label> Username</label>
 			<input type= "text" name="Username" required="true"><br>
 			<label>Password</label>
