trying to fix login

--- a/activityPart2/login.html
+++ b/activityPart2/login.html
@@ -7,9 +7,9 @@
 <body>
 	<form action="loginHandler.php" method="POST">
 		<label> Username</label>
-			<input type= "text" name="Username" required="true"><br>
+			<input type= "text" name="userName" required="true"><br>
 			<label>Password</label>
-		<input type= "password" name="password" required="true"><br>
+		<input type= "passWord" name="passWord" required="true"><br>
 		<button type="submit" class= "btn" name="Login">Login</button>
 	</form>
 </body>
