changed search html file

--- a/SearchActivity/search.html
+++ b/SearchActivity/search.html
@@ -8,7 +8,7 @@
 		<label>Search</label>
 			<form action="searchHandler.php" method = 'POST'>
 		Search for a First Name<input type="text" name="First_Name" required = "true"> <br>
-			<input type="submit" class="brn" name="Search" value="Search">
+			<button type="submit" class="btn" name="search">Search</button>
 		</form>
 	</body>
 </html>
