trying to fix connection to database

--- a/SearchActivity/search.html
+++ b/SearchActivity/search.html
@@ -6,8 +6,8 @@
 	</head>
 	<body>
 		<label>Search</label>
-			<form action="searchHandler.php" method = 'POST'>
-		Search for a First Name<input type="text" name="First_Name" required = "true"> <br>
+			<form action="searchHandler.php" method = "POST">
+		Search for a First Name<input type="text" name="search" required = "true"> <br>
 			<button type="submit" class="btn" name="search">Search</button>
 		</form>
 	</body>
