--- a/SearchActivity/search.html
+++ b/SearchActivity/search.html
@@ -7,7 +7,7 @@
 	<body>
 		<label>Search</label>
 			<form method = "POST" action="searchHandler.php">
-		Search for a First Name<input type="text" name="search" required = "true"> <br>
+		Search for a First Name<input type="text" name="search"> <br>
 			<button type="submit" class="btn" name="search">Search</button>
 		</form>
 	</body>
