trying to find where the issue is

--- a/SearchActivity/search.html
+++ b/SearchActivity/search.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<label>Search</label>
-			<form method = "POST" action="searchHandler.php">
+			<form method = "GET" action="searchHandler.php">
 		Search for a First Name<input type="text" name="search"> <br>
 			<button type="submit" class="btn" name="search">Search</button>
 		</form>
