trying to fix 500 error

--- a/SearchActivity/search.html
+++ b/SearchActivity/search.html
@@ -8,7 +8,7 @@
 		<label>Search</label>
 			<form method = "GET" action="searchHandler.php">
 		Search for a First Name<input type="text" name="search"> <br>
-			<button type="submit" class="btn" name="search">Search</button>
+			<button type="submit" class="btn" name="searchbutton">Search</button>
 		</form>
 	</body>
 </html>
